kubernetes/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dih-frontend
spec:
  selector:
    app: dih-frontend
  ports:
  - port: 80
    targetPort: 80
